[tool.poetry]
name = "yolo"
version = "0.1.0"
description = ""
authors = ["Ogata Katsuya <130939004+ogatakatsuya@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.44.1"
ultralytics = "^8.3.107"
pillow = "^11.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
